--- a/cssstyle.css
+++ b/cssstyle.css
@@ -174,7 +174,7 @@ text-align:left;
 /*--------------------------------
 　Sections
 ---------------------------------*/
-thead,.skill-desc-title{
+thead,.skill-desc-title,{
   text-align:center;
   font-family: 'Roboto', sans-serif;
 }
@@ -189,7 +189,7 @@ thead,.skill-desc-title{
   margin-bottom: 30px;
 }
 
-.section .section-title {
+.section .section-title{
   font-family: 'Oswald', sans-serif;
   letter-spacing: -0.01em;
   display: inline-block;
@@ -245,38 +245,38 @@ thead,.skill-desc-title{
 　WORKS
 ---------------------------------*/
 
-#works .card {
+#contact .card {
   width: 32%;
 }
 
-#works .card {
+#contact .card {
   margin-bottom: 50px;
 }
 
-#works .card-image {
+#contact.card-image {
   display: block;
   margin-bottom: 8px;
   height: 245px;
 }
 
-#works .card-caption {
+#contact.card-capition {
   text-align: center;
 }
 
-#works .card-caption-title {
+#contact.card-capition-title {
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 'bold';
 }
 
-#works .card-caption-info {
+#contact.card-capition-info {
   font-size: 12px;
 }
 
-#works .card-caption-url {
+#contact.card-capition-url {
   font-size: 10px;
 }
 
-#works .card-wrapper{
+#contact.card-wrapper{
   padding: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -542,13 +542,13 @@ thead,.skill-desc-title{
   #latestworks .two-column-desc {
     width: 100%;
   }
-  #works .card {
+  #contact .card {
     width: 48%;
   }
-  #works .card-caption-title {
+  #contact.card-capition-title {
     font-size: 12px;
   }
-  #works .card-caption-info {
+  #contact.card-capition-info {
     font-size: 11px;
   }
   #about .two-column-wrapper {
@@ -662,7 +662,14 @@ thead,.skill-desc-title{
 .biginer{
   font-size: 24px;
 }
-
+.card-capition{
+  text-align: center;
+}
+.card-capition-title{
+  font-weight: bold;
+  font-size: 18px;
+  padding-top: 10px;
+}
 @media only screen and (max-width: 540px) {
   #gnav li {
     font-size: 8px;
