--- a/cssstyle.css
+++ b/cssstyle.css
@@ -658,6 +658,8 @@ thead,.skill-desc-title,{
 }
 .setumei{
   text-align: center;
+  padding-top: 20px;
+  letter-spacing: normal;
 }
 .biginer{
   font-size: 24px;
